--- a/bundle.yaml
+++ b/bundle.yaml
@@ -25927,6 +25927,10 @@ spec:
                         for the remote read endpoint. Requires Prometheus v2.34.0
                         and above.
                       type: boolean
+                    followRedirects:
+                      description: Configure whether HTTP requests follow HTTP 3xx
+                        redirects. Requires Prometheus v2.26.0 and above.
+                      type: boolean
                     headers:
                       additionalProperties:
                         type: string
