--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -177,6 +177,10 @@
                     },
                     "type": "array"
                   },
+                  "scrapeClass": {
+                    "description": "The scrape class to apply.",
+                    "type": "string"
+                  },
                   "staticConfigs": {
                     "description": "StaticConfigs defines a list of static targets with a common label set.",
                     "items": {
