--- a/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
@@ -475,6 +475,9 @@ spec:
                       - http
                       - https
                       type: string
+                    scrapeClass:
+                      description: The scrape class to apply.
+                      type: string
                     scrapeTimeout:
                       description: Timeout after which the scrape is ended If not
                         specified, the Prometheus global scrape interval is used.
