fix: prometheus agent wal compression support
I'm fixing the Prometheus Agent wal compression support

Signed-off-by: Nicolas Takashi <nicolas.takashi@coralogix.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -20835,8 +20835,9 @@ spec:
                   type: object
                 type: array
               walCompression:
-                description: Enable compression of the write-ahead log using Snappy.
+                description: Configures compression of the write-ahead log using Snappy.
                   This flag is only available in versions of Prometheus >= 2.11.0.
+                  WAL compression is enabled by default for Prometheus >= 2.20.0
                 type: boolean
               web:
                 description: Defines the web command line flags when starting Prometheus.
@@ -30389,8 +30390,9 @@ spec:
                   type: object
                 type: array
               walCompression:
-                description: Enable compression of the write-ahead log using Snappy.
+                description: Configures compression of the write-ahead log using Snappy.
                   This flag is only available in versions of Prometheus >= 2.11.0.
+                  WAL compression is enabled by default for Prometheus >= 2.20.0
                 type: boolean
               web:
                 description: Defines the web command line flags when starting Prometheus.
