--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -9216,8 +9216,9 @@ spec:
                   type: object
                 type: array
               walCompression:
-                description: Enable compression of the write-ahead log using Snappy.
+                description: Configures compression of the write-ahead log using Snappy.
                   This flag is only available in versions of Prometheus >= 2.11.0.
+                  WAL compression is enabled by default for Prometheus >= 2.20.0
                 type: boolean
               web:
                 description: Defines the web command line flags when starting Prometheus.
